front: form register ok

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,7 @@
 <h1>{{ title }}</h1>
+<div *ngIf="loggedIn()">Inscription réussie ! Vous pouvez utiliser maintenant vos
+  identifiants.</div>
+
 <div routerLink="login"></div>
 
 <router-outlet></router-outlet>
